@@ -3,6 +3,7 @@
 - add checks for NULL in udev-configure-printer (Fedora #1761097)
 - github #174 - put back notification about missing pysmbc
 - update .pot file because of fix #174
+- python3.9 - xml module removed elem.getchildren() method, use list(elem)
 
 1.5.12 changes
 --------------
